# LAMP

./: .env.example  .gitignore  API.md  ARCH.md  ARCHITECTURAL_WEAKNESSES.md  CONSTRAINTS.md  DATA.md  DATASET_INTEGRITY_REPORT.md  Dockerfile  ML_PIPELINE_DIAGNOSTICS.md  RAYCASTING_BENCHMARK.md  README.md  SETUP.md  SPEC.md  STATE.md  TASKS.md  benchmark_raycast.py  docker-compose.yml  ml_diagnostics.py  pyproject.toml  security_audit.py  validate_dataset.py
api/: cli.py  (+1 more)
task2-viewsheds/: pyproject.toml  requirements.txt
task2-viewsheds/benchmarks/: bench_viewshed.py
task2-viewsheds/outputs/: building_height_raster.tif  occlusion_surface.tif  run_quality_report.md  scene_hillshade.tif  task2_completion.md  tmp_metrics.json  tmp_model.npz  viewshed.dbf  viewshed.shp  viewshed.shx  viewshed.tif  viewshed3d.dbf  viewshed3d.shp  viewshed3d.shx  viewshed3d.tif  viewshed3d_observer_1.gpkg  viewshed3d_observer_2.gpkg  viewshed3d_observer_2.tif  viewshed3d_observer_3.gpkg  viewshed3d_observer_3.tif  viewshed3d_probability.tif  viewshed3d_union.dbf  viewshed3d_union.shp  viewshed3d_union.shx  viewshed3d_union.tif  viewshed3d_volume.vtk  viewshed_all_observers.tif  viewshed_model.npz  viewshed_model_bin_observer_1.gpkg  viewshed_model_bin_observer_1.tif  viewshed_model_bin_observer_2.gpkg  viewshed_model_bin_observer_2.tif  viewshed_model_bin_observer_3.gpkg  viewshed_model_bin_observer_3.tif  viewshed_model_metrics.json  viewshed_model_prob_observer_1.tif  viewshed_model_prob_observer_2.tif  viewshed_model_prob_observer_3.tif  viewshed_model_probability.tif  viewshed_model_union.dbf  (+9 more)
(+245 files in other folders)
