[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamp"
version = "0.1.0"
description = "Locating and Mapping Positions (LAMP) Geospatial Pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "scipy>=1.10",
    "scikit-image>=0.22",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "GDAL>=3.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
lamp = "lamp.api.cli:main"
lamp-validate = "lamp.api.dataset_validation_cli:run"
lamp-diagnostics = "lamp.api.ml_diagnostics_cli:run"
lamp-security = "lamp.api.security_audit_cli:run"
lamp-benchmark = "lamp.api.raycast_benchmark_cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "**/__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
