[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamp-3d-viewshed"
version = "0.1.0"
description = "Deterministic and model-based viewshed pipeline for LAMP Task 2"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
